// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parsing elodin syntax should correctly parse conditionals 1`] = `
Object {
  "ast": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "dynamic": false,
            "property": "backgroundColor",
            "raw": false,
            "type": "Declaration",
            "value": Object {
              "type": "Identifier",
              "value": "red",
            },
          },
          Object {
            "body": Array [
              Object {
                "dynamic": false,
                "property": "color",
                "raw": false,
                "type": "Declaration",
                "value": Object {
                  "type": "Identifier",
                  "value": "red",
                },
              },
            ],
            "operator": "=",
            "property": Object {
              "type": "Identifier",
              "value": "Type",
            },
            "type": "Conditional",
            "value": Object {
              "type": "Identifier",
              "value": "Primary",
            },
          },
        ],
        "name": "Button",
        "type": "Style",
      },
    ],
    "type": "File",
  },
  "errors": Array [],
}
`;

exports[`Parsing elodin syntax should correctly parse env condition 1`] = `
Object {
  "ast": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "body": Array [
              Object {
                "dynamic": false,
                "property": "color",
                "raw": false,
                "type": "Declaration",
                "value": Object {
                  "type": "Identifier",
                  "value": "red",
                },
              },
            ],
            "boolean": true,
            "property": Object {
              "environment": true,
              "type": "Variable",
              "value": "hover",
            },
            "type": "Conditional",
          },
          Object {
            "body": Array [
              Object {
                "dynamic": false,
                "property": "color",
                "raw": false,
                "type": "Declaration",
                "value": Object {
                  "type": "Identifier",
                  "value": "blue",
                },
              },
              Object {
                "body": Array [
                  Object {
                    "dynamic": false,
                    "property": "color",
                    "raw": false,
                    "type": "Declaration",
                    "value": Object {
                      "type": "Identifier",
                      "value": "green",
                    },
                  },
                ],
                "boolean": true,
                "property": Object {
                  "environment": true,
                  "type": "Variable",
                  "value": "hover",
                },
                "type": "Conditional",
              },
            ],
            "operator": "=",
            "property": Object {
              "environment": true,
              "type": "Variable",
              "value": "minWidth",
            },
            "type": "Conditional",
            "value": Object {
              "negative": false,
              "type": "NumericLiteral",
              "value": 320,
            },
          },
        ],
        "name": "Button",
        "type": "Style",
      },
    ],
    "type": "File",
  },
  "errors": Array [],
}
`;

exports[`Parsing elodin syntax should correctly parse fragments 1`] = `
Object {
  "ast": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "dynamic": false,
            "property": "flexDirection",
            "raw": false,
            "type": "Declaration",
            "value": Object {
              "type": "Identifier",
              "value": "row",
            },
          },
          Object {
            "dynamic": false,
            "property": "alignSelf",
            "raw": false,
            "type": "Declaration",
            "value": Object {
              "type": "Identifier",
              "value": "stretch",
            },
          },
          Object {
            "dynamic": false,
            "property": "flexGrow",
            "raw": false,
            "type": "Declaration",
            "value": Object {
              "negative": false,
              "type": "NumericLiteral",
              "value": 0,
            },
          },
          Object {
            "dynamic": false,
            "property": "flexShrink",
            "raw": false,
            "type": "Declaration",
            "value": Object {
              "negative": false,
              "type": "NumericLiteral",
              "value": 1,
            },
          },
          Object {
            "dynamic": false,
            "property": "flexBasis",
            "raw": false,
            "type": "Declaration",
            "value": Object {
              "type": "Identifier",
              "value": "auto",
            },
          },
        ],
        "name": "Flex",
        "type": "Fragment",
      },
    ],
    "type": "File",
  },
  "errors": Array [],
}
`;

exports[`Parsing elodin syntax should correctly parse multiple styles 1`] = `
Object {
  "ast": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "dynamic": false,
            "property": "backgroundColor",
            "raw": false,
            "type": "Declaration",
            "value": Object {
              "type": "Identifier",
              "value": "red",
            },
          },
          Object {
            "dynamic": false,
            "property": "color",
            "raw": false,
            "type": "Declaration",
            "value": Object {
              "type": "Identifier",
              "value": "blue",
            },
          },
          Object {
            "dynamic": false,
            "property": "fontSize",
            "raw": false,
            "type": "Declaration",
            "value": Object {
              "negative": false,
              "type": "NumericLiteral",
              "value": 15,
            },
          },
        ],
        "name": "Button",
        "type": "Style",
      },
      Object {
        "body": Array [
          Object {
            "dynamic": false,
            "property": "lineHeight",
            "raw": false,
            "type": "Declaration",
            "value": Object {
              "negative": false,
              "type": "NumericLiteral",
              "value": 2,
            },
          },
        ],
        "name": "Label",
        "type": "Style",
      },
    ],
    "type": "File",
  },
  "errors": Array [],
}
`;

exports[`Parsing elodin syntax should correctly parse styles 1`] = `
Object {
  "ast": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "dynamic": false,
            "property": "backgroundColor",
            "raw": false,
            "type": "Declaration",
            "value": Object {
              "type": "Identifier",
              "value": "red",
            },
          },
          Object {
            "dynamic": false,
            "property": "color",
            "raw": false,
            "type": "Declaration",
            "value": Object {
              "type": "Identifier",
              "value": "blue",
            },
          },
          Object {
            "dynamic": false,
            "property": "borderColor",
            "raw": false,
            "type": "Declaration",
            "value": Object {
              "callee": "rgb",
              "params": Array [
                Object {
                  "negative": false,
                  "type": "NumericLiteral",
                  "value": 255,
                },
                Object {
                  "negative": false,
                  "type": "NumericLiteral",
                  "value": 255,
                },
                Object {
                  "negative": false,
                  "type": "NumericLiteral",
                  "value": 255,
                },
              ],
              "type": "FunctionExpression",
            },
          },
          Object {
            "dynamic": false,
            "property": "fontSize",
            "raw": false,
            "type": "Declaration",
            "value": Object {
              "negative": false,
              "type": "NumericLiteral",
              "value": 15,
            },
          },
          Object {
            "dynamic": false,
            "property": "lineHeight",
            "raw": false,
            "type": "Declaration",
            "value": Object {
              "fractional": 2,
              "integer": 1,
              "negative": false,
              "type": "Float",
            },
          },
          Object {
            "dynamic": true,
            "property": "borderWidth",
            "raw": false,
            "type": "Declaration",
            "value": Object {
              "environment": false,
              "type": "Variable",
              "value": "width",
            },
          },
          Object {
            "dynamic": false,
            "property": "animationName",
            "raw": true,
            "type": "Declaration",
            "value": Object {
              "type": "Identifier",
              "value": "keyframe",
            },
          },
        ],
        "name": "Button",
        "type": "Style",
      },
    ],
    "type": "File",
  },
  "errors": Array [],
}
`;
